MOTECH-2861: Switched off datanucleus property IT tests still need to be fixed though

--- a/pom.xml
+++ b/pom.xml
@@ -1599,10 +1599,15 @@
             </plugin>
         </plugins>
     </build>
-
+    <!-- By default the datanucleus property detachAllOnCommit is switched off in IT profile, however you can switch on this property
+     by setting detach environment to detach-true, for example: mvn clean install -PIT -Ddetach=detach-true
+     -->
     <profiles>
         <profile>
             <id>IT</id>
+            <properties>
+                <detach>detach-false</detach>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -1626,6 +1631,14 @@
                                         <resource>
                                             <directory>${modules.root.dir}/testdata/${motech.sql.dbtype}</directory>
                                             <include>bootstrap.properties</include>
+                                        </resource>
+                                        <resource>
+                                            <directory>${modules.root.dir}/testdata/${detach}</directory>
+                                            <include>datanucleus_data.properties</include>
+                                        </resource>
+                                        <resource>
+                                            <directory>${modules.root.dir}/testdata/${detach}</directory>
+                                            <include>datanucleus_schema.properties</include>
                                         </resource>
                                     </resources>
                                 </configuration>
