--- a/testdata/detach-true/datanucleus_schema.properties
+++ b/testdata/detach-true/datanucleus_schema.properties
@@ -1,11 +1,10 @@
 javax.jdo.PersistenceManagerFactoryClass=org.datanucleus.api.jdo.JDOPersistenceManagerFactory
 
-javax.jdo.option.ConnectionDriverName=${motech.sql.driver}
-javax.jdo.option.ConnectionURL=${motech.sql.url}motechdata
-javax.jdo.option.ConnectionUserName=${motech.sql.user}
-javax.jdo.option.ConnectionPassword=${motech.sql.password}
+javax.jdo.option.ConnectionDriverName=${sql.driver}
+javax.jdo.option.ConnectionURL=${sql.url}motechschema
+javax.jdo.option.ConnectionUserName=${sql.user}
+javax.jdo.option.ConnectionPassword=${sql.password}
 javax.jdo.option.NontransactionalWrite=false
-javax.jdo.option.Optimistic=true
 
 datanucleus.schema.autoCreateAll=true
 datanucleus.schema.validateTables=false
@@ -17,4 +16,3 @@ datanucleus.DetachAllOnCommit=true
 datanucleus.classLoaderResolverName=clr.mds
 datanucleus.query.sql.allowAll=true
 datanucleus.deletionPolicy=DataNucleus
-datanucleus.flush.mode=AUTO
