--- a/testdata/detach-false/datanucleus_schema.properties
+++ b/testdata/detach-false/datanucleus_schema.properties
@@ -1,11 +1,10 @@
 javax.jdo.PersistenceManagerFactoryClass=org.datanucleus.api.jdo.JDOPersistenceManagerFactory
 
 javax.jdo.option.ConnectionDriverName=${sql.driver}
-javax.jdo.option.ConnectionURL=${sql.url}motechdata
+javax.jdo.option.ConnectionURL=${sql.url}motechschema
 javax.jdo.option.ConnectionUserName=${sql.user}
 javax.jdo.option.ConnectionPassword=${sql.password}
 javax.jdo.option.NontransactionalWrite=false
-javax.jdo.option.Optimistic=true
 
 datanucleus.schema.autoCreateAll=true
 datanucleus.schema.validateTables=false
@@ -18,4 +17,3 @@ datanucleus.RetainValues=true
 datanucleus.classLoaderResolverName=clr.mds
 datanucleus.query.sql.allowAll=true
 datanucleus.deletionPolicy=DataNucleus
-datanucleus.flush.mode=AUTO
