--- a/testdata/detach-true/datanucleus_data.properties
+++ b/testdata/detach-true/datanucleus_data.properties
@@ -1,10 +1,11 @@
 javax.jdo.PersistenceManagerFactoryClass=org.datanucleus.api.jdo.JDOPersistenceManagerFactory
 
-javax.jdo.option.ConnectionDriverName=${motech.sql.driver}
-javax.jdo.option.ConnectionURL=${motech.sql.url}motechschema
-javax.jdo.option.ConnectionUserName=${motech.sql.user}
-javax.jdo.option.ConnectionPassword=${motech.sql.password}
+javax.jdo.option.ConnectionDriverName=${sql.driver}
+javax.jdo.option.ConnectionURL=${sql.url}motechdata
+javax.jdo.option.ConnectionUserName=${sql.user}
+javax.jdo.option.ConnectionPassword=${sql.password}
 javax.jdo.option.NontransactionalWrite=false
+javax.jdo.option.Optimistic=true
 
 datanucleus.schema.autoCreateAll=true
 datanucleus.schema.validateTables=false
@@ -16,3 +17,4 @@ datanucleus.DetachAllOnCommit=true
 datanucleus.classLoaderResolverName=clr.mds
 datanucleus.query.sql.allowAll=true
 datanucleus.deletionPolicy=DataNucleus
+datanucleus.flush.mode=AUTO
