--- a/modules/tasks/tasks/pom.xml
+++ b/modules/tasks/tasks/pom.xml
@@ -145,9 +145,7 @@
                             org.motechproject.tasks.repository;version=${project.version},
                             org.motechproject.tasks.service;version=${project.version},
                             org.motechproject.tasks.service.osgi;version=${project.version},
-                            org.motechproject.tasks.util;version=${project.version},
-                            org.motechproject.tasks.domain.enums;version=${project.version},
-                            org.motechproject.tasks.dto;version=${project.version}
+                            org.motechproject.tasks.util;version=${project.version}
                         </Export-Package>
                         <Import-Package>
                             net.sf.cglib.core,
